--- a/docker/.env
+++ b/docker/.env
@@ -1,1 +1,13 @@
 AIRFLOW_UID=0
+
+DB_PORT=15432
+DB_NAME=dev
+DB_USER=dev
+DB_PASSWORD=dev
+
+HTTP_PORT=8081
+#METABASE_HTTP_PORT=3001
+
+MOUNT_FOLDER=/var/data2/asavinkov/mounts
+
+
