--- a/docker/.env
+++ b/docker/.env
@@ -9,5 +9,6 @@ HTTP_PORT=8081
 #METABASE_HTTP_PORT=3001
 
 MOUNT_FOLDER=/var/data2/asavinkov/mounts
+ETL_MOUNT_FOLDER=/var/data2/asavinkov/mounts/meta
 
 
