[MLE-005] etl cluster intergrated into whole pipeline

--- a/docker/de_cluster.yaml
+++ b/docker/de_cluster.yaml
@@ -4,7 +4,9 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: base_airflow
+  build:
+    context: ./
+    dockerfile: ./images/Dockerfile_airflow
   #${AIRFLOW_IMAGE_NAME:-apache/airflow:2.4.2}
   # build: .
   environment:
@@ -240,7 +242,9 @@ services:
       - de-network
 
   spark-master:
-    image: pyspark-image
+    build:
+      context: ./
+      dockerfile: ./images/pyspark/Dockerfile
     # container_name: spark-master
     hostname: spark-master
     ports:
@@ -255,7 +259,9 @@ services:
     command: "/start-master.sh"
     
   spark-worker:
-    image: pyspark-image
+    build:
+      context: ./
+      dockerfile: ./images/pyspark/Dockerfile
     depends_on:
       - spark-master
     ports:
@@ -283,124 +289,125 @@ services:
 
 # ###################################
 
-#   redis:
-#     image: redis:6.2.1
-#     restart: unless-stopped
-#     environment:
-#       - ALLOW_EMPTY_PASSWORD=yes
-#     volumes:
-#       - ${MOUNT_FOLDER}/redis_data:/data
-#     ports:
-#       - "6379:6379"
-#     networks:
-#       - de-network
+  redis:
+    image: redis:6.2.1
+    restart: unless-stopped
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - ${MOUNT_FOLDER}/redis_data:/data
+    ports:
+      - "6379:6379"
+    networks:
+      - de-network
 
-#   converter:
-#     image: eugenmayer/kontextwork-converter:production
-#     restart: unless-stopped
-#     volumes:
-#       - ${MOUNT_FOLDER}/jod_converter_conf:/etc/app
-#     ports:
-#       - "8080:8080"
-#     networks:
-#       - de-network
+  converter:
+    image: eugenmayer/kontextwork-converter:production
+    restart: unless-stopped
+    volumes:
+      - ${MOUNT_FOLDER}/jod_converter_conf:/etc/app
+    ports:
+      - "8080:8080"
+    networks:
+      - de-network
 
-#   postgres:
-#     build:
-#       context: .
-#       dockerfile: ./images/postgres/Dockerfile
-#     restart: unless-stopped
-#     volumes:
-#       - ${MOUNT_FOLDER}/postgres:/var/lib/postgresql/data
-#       - ${MOUNT_FOLDER}/postgres_backups:/backups
-#     environment:
-#       POSTGRES_DB: qos
-#       POSTGRES_USER: qos
-#       POSTGRES_PASSWORD: qos
-#       POSTGRES_HOST: localhost
-#       POSTGRES_PORT: 5432
-#     ports:
-#       - "5432:5432"
-#     networks:
-#       - de-network
+  postgres:
+    build:
+      context: .
+      dockerfile: ./images/postgres/Dockerfile
+    restart: unless-stopped
+    volumes:
+      - ${MOUNT_FOLDER}/postgres:/var/lib/postgresql/data
+      - ${MOUNT_FOLDER}/postgres_backups:/backups
+    environment:
+      POSTGRES_DB: qos
+      POSTGRES_USER: qos
+      POSTGRES_PASSWORD: qos
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+    ports:
+      - "5432:5432"
+    networks:
+      - de-network
       
-#   web:
-#     build:
-#       context: ./
-#       dockerfile: ./images/web/Dockerfile
-#     # restart: unless-stopped
-#     command: uwsgi --http :9090 --wsgi-file wsgi.py
-#     volumes:
-#       - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
-#       - ${MOUNT_FOLDER}/uwsgi:/uwsgi
-#       - ${MOUNT_FOLDER}/logs:/webapp/logs
-#       - ${MOUNT_FOLDER}/media:/webapp/media
-#       - ${MOUNT_FOLDER}/static:/webapp/static
-#       - ${MOUNT_FOLDER}/ipython_data:/root/.ipython/profile_default
-#       - ./local_settings_web.py:/webapp/src/conf/djconfig_local.py
-#       - ./../../QoS_backend/:/webapp/
-#     environment:
-#       REDIS_HOST: redis
-#       HOST: http://localhost:9090
-#       DB_NAME: qos
-#       DB_USER: qos
-#       DB_PASSWORD: qos
-#       DB_HOST: postgres
-#       JOD_CONVERTER_URL: http://converter:8080
-#       UWSGI_WORKERS: 1
-#       UWSGI_THREADS: 1
-#     depends_on:
-#       - postgres
-#       - redis
-#     ports:
-#       - "9090:9090"
-#     networks:
-#       - de-network
+  # export DOCKER_BUILDKIT=1
+  web:
+    build:
+      context: ./
+      dockerfile: ./images/web/Dockerfile
+    # restart: unless-stopped
+    command: uwsgi --http :9090 --wsgi-file wsgi.py
+    volumes:
+      - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
+      - ${MOUNT_FOLDER}/uwsgi:/uwsgi
+      - ${MOUNT_FOLDER}/logs:/webapp/logs
+      - ${MOUNT_FOLDER}/media:/webapp/media
+      - ${MOUNT_FOLDER}/static:/webapp/static
+      - ${MOUNT_FOLDER}/ipython_data:/root/.ipython/profile_default
+      - ./local_settings_web.py:/webapp/src/conf/djconfig_local.py
+      - ./../../QoS_backend/:/webapp/
+    environment:
+      REDIS_HOST: redis
+      HOST: http://localhost:9090
+      DB_NAME: qos
+      DB_USER: qos
+      DB_PASSWORD: qos
+      DB_HOST: postgres
+      JOD_CONVERTER_URL: http://converter:8080
+      UWSGI_WORKERS: 1
+      UWSGI_THREADS: 1
+    depends_on:
+      - postgres
+      - redis
+    ports:
+      - "9090:9090"
+    networks:
+      - de-network
 
-#   celery:
-#     build:
-#       context: ./
-#       dockerfile: ./images/web/Dockerfile
-#     command: celery -A src.celery worker -n main --max-tasks-per-child=100 --max-memory-per-child=25000 --loglevel=INFO --logfile=/webapp/logs/celery_main.log
-#     volumes:
-#       - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
-#       - ${MOUNT_FOLDER}/uwsgi:/uwsgi
-#       - ${MOUNT_FOLDER}/logs:/webapp/logs
-#       - ${MOUNT_FOLDER}/media:/webapp/media
-#       - ${MOUNT_FOLDER}/static:/webapp/static
-#       - ${MOUNT_FOLDER}/ipython_data:/root/.ipython/profile_default
-#       - ./local_settings_web.py:/webapp/src/conf/djconfig_local.py
-#       - ./../../QoS_backend/:/webapp/
-#     environment:
-#       REDIS_HOST: redis
-#       HOST: http://web:80
-#       DB_NAME: qos
-#       DB_USER: qos
-#       DB_PASSWORD: qos
-#       DB_HOST: postgres
-#       JOD_CONVERTER_URL: http://converter:8080
-#     depends_on:
-#       - postgres
-#       - redis
-#     networks:
-#       - de-network
+  celery:
+    build:
+      context: ./
+      dockerfile: ./images/web/Dockerfile
+    command: celery -A src.celery worker -n main --max-tasks-per-child=100 --max-memory-per-child=25000 --loglevel=INFO --logfile=/webapp/logs/celery_main.log
+    volumes:
+      - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
+      - ${MOUNT_FOLDER}/uwsgi:/uwsgi
+      - ${MOUNT_FOLDER}/logs:/webapp/logs
+      - ${MOUNT_FOLDER}/media:/webapp/media
+      - ${MOUNT_FOLDER}/static:/webapp/static
+      - ${MOUNT_FOLDER}/ipython_data:/root/.ipython/profile_default
+      - ./local_settings_web.py:/webapp/src/conf/djconfig_local.py
+      - ./../../QoS_backend/:/webapp/
+    environment:
+      REDIS_HOST: redis
+      HOST: http://web:80
+      DB_NAME: qos
+      DB_USER: qos
+      DB_PASSWORD: qos
+      DB_HOST: postgres
+      JOD_CONVERTER_URL: http://converter:8080
+    depends_on:
+      - postgres
+      - redis
+    networks:
+      - de-network
 
-#   flower:
-#     build:
-#       context: ./
-#       dockerfile: ./images/web/Dockerfile
-#     command: celery -A src.celery flower --conf=/webapp/flowerconfig.py --port=5555
-#     volumes:
-#       - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
-#       - ${MOUNT_FOLDER}/uwsgi:/uwsgi
-#       - ${MOUNT_FOLDER}/logs:/webapp/logs
-#       - ./../../QoS_backend/:/webapp/
-#     environment:
-#       REDIS_HOST: redis
-#     ports:
-#       - "5555:5555"
-#     networks:
-#       - de-network
+  flower:
+    build:
+      context: ./
+      dockerfile: ./images/web/Dockerfile
+    command: celery -A src.celery flower --conf=/webapp/flowerconfig.py --port=5555
+    volumes:
+      - ${MOUNT_FOLDER}/reports:/webapp/etc/reports
+      - ${MOUNT_FOLDER}/uwsgi:/uwsgi
+      - ${MOUNT_FOLDER}/logs:/webapp/logs
+      - ./../../QoS_backend/:/webapp/
+    environment:
+      REDIS_HOST: redis
+    ports:
+      - "5555:5555"
+    networks:
+      - de-network
 
 
 networks:
